scroll overflow fix

--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -11,7 +11,7 @@ h2 {
 
 .table-container {
   width: 100%;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  box-shadow: var(--box-shadow-card);
   border-radius: 8px;
   background: var(--color-surface);
   overflow: hidden;
