--- a/src/assets/styles/theme/colors.css
+++ b/src/assets/styles/theme/colors.css
@@ -10,4 +10,6 @@
   --color-info: #92959e;
   --color-error: #b00020;
   --color-on-error: #fff;
+
+  --box-shadow-card: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
